<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorUfoGreen"
    android:layout_height="match_parent"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/line_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/border_linear_splash"
        >
        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_title_name"
            android:fontFamily="@font/lobstertwo_bolditalic"
            android:textSize="30dp"
            android:textColor="@color/colorWhite"

            />
        <TextView
            android:id="@+id/txt_apps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_title_apps"
            android:fontFamily="@font/lobstertwo_italic"
            android:textSize="30dp"
            android:textColor="@color/colorWhite"
            />


    </LinearLayout>

    <TextView
        android:id="@+id/txt_ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_up"
        android:text="@string/splash_ver"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/lobstertwo_regular"
        />

</RelativeLayout>